--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "scripts": {
     "build": "bsb -make-world -backend native",
     "watch": "bsb -make-world -backend native -w",
-    "js": "bsb -make-world -backend js",
-    "js:watch": "bsb -make-world -backend js -w",
     "clean": "bsb -clean-world"
   },
-  "dependencies": {
+  "// js": "bsb -make-world -backend js",
+  "// js:watch": "bsb -make-world -backend js -w",
+  "devDependencies": {
     "bs-platform": "bsansouci/bsb-native#fast"
   }
 }
