--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "js:watch": "bsb -make-world -backend js -w"
   },
   "devDependencies": {
-    "bs-platform": "bsansouci/bsb-native#fast"
+    "bs-platform": "bsansouci/bsb-native#2.1.1"
   },
   "dependencies": {
     "matchenv": "github:bsansouci/matchenv"
