--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,6 @@
 {
   "name": "reason-cli-tools",
-  // "namespace": true,
+  "namespace": true,
   "bsc-flags": "-w -27 -g",
   "warnings": {
     "number": "-40+6+7-26-27+32..39-28-44+45-102",
