--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,7 +14,7 @@
     ]},
     {"dir": "test", "type": "dev"},
   ],
-  "ppx-flags": ["./node_modules/matchenv/matchenv"],
+  "ppx-flags": ["matchenv/matchenv"],
   "entries": [{
     "backend": "native",
     "main-module": "Test_native"
