--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "js:watch": "bsb -make-world -backend js -w"
   },
   "devDependencies": {
-    "bs-platform": "bsansouci/bsb-native#3.2.0"
+    "bsb-native": "4.0.6"
   }
 }
